pyinterp/pyinterp/pyinterp/tests/must_pass/errors/missing_arg1.py
def f(x):
    pass
f()
